# ninux_esp32_ota

./: CMakeLists.txt  Kconfig  README.md  component.mk  ninux_esp32_ota.c  ninux_esp32_ota.h
include/: ninux_esp32_ota.h
server_certs/: ca_cert.pem  ca_key.pem
